src/styles/TextStyles.module.scss
@import "@/styles/variables.scss";

// text styles
span {
  &.grey {
    color: $grey;
    // alternate shade for contrast
    // color: #929292bd;
  }
  &.white {
    color: $foreground;
  }
  &.green {
    color: $accent;
  }
}

.pageStream {
  display: flex;
  flex-flow: column nowrap;
  height: 100%;
  width: 100%;
  > :last-child {
    margin-bottom: 0 !important;
  }
}

